buildlog.txt
   Compiling edit32 v1.2.1 (C:\Users\louis\Documents\edit\crates\edit)
error[E0308]: mismatched types
   --> crates\edit\src\bin\edit\draw_statusbar.rs:312:52
    |
312 |                     candidates.push((path.clone(), score));
    |                                                    ^^^^^ expected `i64`, found `i32`
    |
help: you can convert an `i32` to an `i64`
    |
312 |                     candidates.push((path.clone(), score.into()));
    |                                                         +++++++

error[E0308]: mismatched types
   --> crates\edit\src\bin\edit\draw_statusbar.rs:324:56
    |
324 |                         candidates.push((path.clone(), score));
    |                                                        ^^^^^ expected `i64`, found `i32`
    |
help: you can convert an `i32` to an `i64`
    |
324 |                         candidates.push((path.clone(), score.into()));
    |                                                             +++++++

error[E0308]: mismatched types
   --> crates\edit\src\bin\edit\draw_statusbar.rs:338:52
    |
338 |                     candidates.push((path.clone(), score));
    |                                                    ^^^^^ expected `i64`, found `i32`
    |
help: you can convert an `i32` to an `i64`
    |
338 |                     candidates.push((path.clone(), score.into()));
    |                                                         +++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `edit32` (bin "edit32") due to 3 previous errors
